cabal-version:      3.4
name:               hindsight
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Gaël Deest
maintainer:         gael.deest@franbec.org
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

common opts
    ghc-options: -O

library
    import:           warnings, opts
    exposed-modules:  Hindsight,
                      Hindsight.Core,
                      Hindsight.Store,
                      Hindsight.Store.Parsing
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      aeson,
                      containers,
                      text,
                      time,
                      uuid
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

-- Internal library for event testing utilities
library event-testing
    import:           warnings, opts
    visibility:       public
    exposed-modules:  Test.Hindsight.Generate
    build-depends:    base,
                      aeson,
                      aeson-pretty,
                      bytestring,
                      filepath,
                      hindsight,
                      QuickCheck,
                      tasty,
                      tasty-golden,
                      tasty-quickcheck,
                      text
    hs-source-dirs:   test-lib
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

-- Internal library for store testing utilities
library store-testing
    import:           warnings, opts
    visibility:       public
    exposed-modules:  Test.Hindsight.Store.Common,
                      Test.Hindsight.Store.TestRunner,
                      Test.Hindsight.Store.StressTests,
                      Test.Hindsight.Store.PropertyTests,
                      Test.Hindsight.Store.OrderingTests,
                      Test.Hindsight.Examples
    other-modules:    Test.Hindsight.Generate
    build-depends:    base,
                      aeson,
                      aeson-pretty,
                      async,
                      bytestring,
                      containers,
                      filepath,
                      hedgehog,
                      hindsight,
                      hindsight:event-testing,
                      QuickCheck,
                      quickcheck-instances,
                      random,
                      stm,
                      tasty,
                      tasty-golden,
                      tasty-hedgehog,
                      tasty-hunit,
                      tasty-quickcheck,
                      text,
                      time,
                      unliftio,
                      uuid
    hs-source-dirs:   test-lib
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

test-suite hindsight-test
    import:           warnings, opts
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    ghc-options:      -threaded -rtsopts
    other-modules:    Test.Hindsight
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        aeson-pretty,
        async,
        bytestring,
        aeson,
        containers,
        directory,
        filepath,
        hedgehog,
        hindsight:event-testing,
        hindsight:store-testing,
        QuickCheck,
        random,
        stm,
        tasty,
        tasty-golden,
        tasty-quickcheck,
        tasty-hedgehog,
        time,
        temporary,
        text,
        unix,
        unliftio


