cabal-version:      3.4
name:               hindsight-website
version:            0.1.0.0
synopsis:           Static site generator for Hindsight project website
description:        Hakyll-based site generator that integrates Sphinx documentation
                    with blog posts and static pages.
license:            NONE
author:             Hindsight Contributors
maintainer:         gael.deest@franbec.org
category:           Web
build-type:         Simple

executable site
    main-is:          site.hs
    build-depends:    base >= 4.20.1 && < 5,
                      filepath >= 1.5.4 && < 1.6,
                      hakyll >= 4.16.7 && < 4.17,
                      pandoc >= 3.8.2 && < 3.9
    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -Wall -threaded -O2
