cabal-version:      3.4
name:               long-running-subscription
version:            0.1.0.0
synopsis:           Long-running subscription example to test notification staleness
description:        Minimal Servant API example that tests PostgreSQL subscription stability over hours
license:            NONE
author:             Gaël Deest
maintainer:         gael@hindsight.events
category:           Example
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

executable long-running-subscription
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, OverloadedStrings, TypeOperators
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      bytestring >= 0.12.2 && < 0.13,
                      hasql >= 1.9 && < 1.10,
                      hasql-pool >= 1.3.0 && < 1.4,
                      hasql-transaction >= 1.2 && < 1.3,
                      hindsight-core >= 0.1.0 && < 0.2,
                      hindsight-postgresql-store >= 0.1.0 && < 0.2,
                      hindsight-postgresql-projections >= 0.1.0 && < 0.2,
                      servant >= 0.20 && < 0.21,
                      servant-server >= 0.20 && < 0.21,
                      text >= 2.1.2 && < 2.2,
                      time >= 1.12.2 && < 1.13,
                      unliftio >= 0.2.25 && < 0.3,
                      uuid >= 1.3.16 && < 1.4,
                      warp >= 3.4 && < 3.5
